Fixed spacing between nav links

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -299,7 +299,6 @@ NAVIGATION
 
 .navigation-list li {
     display: inline-block;
-    margin-left: 15px;
 }
 
 a.navigation__item {
