--- a/css/styles.css
+++ b/css/styles.css
@@ -206,7 +206,6 @@ NAVIGATION
 
 .navigation-list li {
     display: inline-block;
-    margin-left: 15px;
 }
 
 a.navigation__item {
